# algorithms

./: CMakeLists.txt  claude.resume  euclid_gcd.h  helpers.h  main.cpp  transpose_a_matrix.h
algoexpert/: two_number_sum.h
dp/: coin_change_dp.h  edit_distance.h  knapsack_01.h  lcs.h  lis.h  longest_palindromic_subsequence.h  matrix_chain.h  max_subarray.h  rod_cutting.h  subset_sum.h  word_break.h  zadacha1_dp.h
dp_lab_solutions/LabExercises-3_Solutions/: Lab_Exercise-3-Task-1.cpp  Lab_Exercise-3-Task-2.cpp  Lab_Exercise-3-Task-3.cpp  Lab_Exercise-3-Task-4.cpp  Lab_Exercise-3-Task-5.cpp
exam/: asen_boris_i_kartonchetata.h  draw_points_rene_decarte.py  inputs_supertriangle.txt  start_template.h  supertriangle.h  tasks.txt  wall_contructor.h
graph/: adjacency_list.h  adjancency_list.h  bfs.h  bfs_2.h  dfs.h  dfs_check_if_graph_is_bipartite.h  dfs_traverse_a_char_tree.h  dijkstra.h  distance_of_nearest_1_in_binary_grid.h  find_shortes_path_between_nodes.h  find_shortest_path_between_cities.h  knight_steps.cpp  knight_steps.h  kruskal.h  prim.h  printPathVertices.h  read_adjacency_list.h  read_adjacency_matrix.h  shortest_path_unweighted.h  simple_adjacency_list_implementation.h  steps_knight.h  topological_sort.h  undirected_cycle_detector.h
greedy/: activity_selection.h  fractional_knapsack.h  huffman.h  interval_partitioning.h  job_sequencing.h  min_cost.h  minimum_number_of_coins.h  obsht_broi_nenamalqvashti_chisla.h  task_bind.h  trapping_rain_water.h
search/: binary_search.h  binary_search_recursively.h
sorting/: binary_insertion_sort.h  bucket_sort.h  intervals_sort.h  merge_two_sorted_arrays.h  quick_sort.h  quick_sort_ll.h  selection_sort.h
